--- a/buf.gen.python.yaml
+++ b/buf.gen.python.yaml
@@ -1,22 +1,22 @@
 version: v1
 plugins:
   - name: python
-    out: pypkg/omp-template-api
+    out: pypkg/cnm-purchase-api
     strategy: directory
 
   - name: grpclib_python
-    out: pypkg/omp-template-api
+    out: pypkg/cnm-purchase-api
     strategy: directory
 
   - name: grpc-gateway
-    out: pkg/omp-template-api
+    out: pkg/cnm-purchase-api
     opt:
       - logtostderr=true
       - paths=import
     strategy: directory
 
   - name: validate
-    out: pkg/omp-template-api
+    out: pkg/cnm-purchase-api
     opt:
       - lang=go
     strategy: directory
