--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,9 +20,9 @@ services:
       - postgres
       - kafka
     ports:
-      - 8080:8080 # REST
+      - 8083:8080 # REST
       - 8082:8082 # gRPC
-      - 9100:9100 # Metrics prometheus
+      - 9101:9101 # Metrics prometheus
       - 8000:8000 # Status prometheus
       - 40000:40000 # Debug port
     healthcheck:
@@ -34,6 +34,19 @@ services:
     volumes:
       - ./migrations:/root/migrations
       - ./config.yml:/root/config.yml
+
+  reverseproxy:
+    image: nginx
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - cnm-purchase-api
+      - swagger-ui
+    restart: always
+    networks:
+      - ompnw
 
   postgres:
     image: postgres:latest
