--- a/Dockerfile.debug
+++ b/Dockerfile.debug
@@ -1,20 +1,19 @@
 # Builder
 
-ARG GITHUB_PATH=github.com/ozonmp/cnm-purchase-api
-
 FROM golang:1.16-alpine AS builder
-
+ARG GITHUB_PATH=github.com/ozonmp/lgc-location-api
+RUN apk add --update make  build-base git protoc protobuf protobuf-dev curl
+COPY . /home/${GITHUB_PATH}
 WORKDIR /home/${GITHUB_PATH}
+RUN make deps-go && make build-go
+#-gcflags="all=-N -l" 
 
-RUN apk add --update make git protoc protobuf protobuf-dev curl
-COPY Makefile Makefile
-RUN make deps-go
-COPY . .
-RUN make build-go
+RUN go get github.com/go-delve/delve/cmd/dlv
 
 # gRPC Server
 
 FROM alpine:latest as server
+ARG GITHUB_PATH=github.com/ozonmp/lgc-location-api
 RUN apk --no-cache add ca-certificates
 WORKDIR /root/
 
@@ -29,6 +28,6 @@ RUN chown root:root grpc-server
 EXPOSE 50051
 EXPOSE 40000
 EXPOSE 8080
-EXPOSE 9101
+EXPOSE 9100
 
 CMD ["./dlv", "--listen=:40000", "--headless=true", "--api-version=2", "--accept-multiclient", "exec", "./grpc-server"]
